# prac-2022-12

./: .gitignore  Cargo.toml  README.md  hello.sh  pts.csv  spline.csv  y.csv
area_calc/: Cargo.toml
area_calc/src/: lib.rs  secant_method_root.rs  simpson_integrator.rs
common/: Cargo.toml
common/src/: function.rs  lib.rs  table_function.rs
common/src/table_function/: error.rs  mod.rs
iced-app/: Cargo.toml
iced-app/src/: main.rs
integral_eq/: Cargo.toml
integral_eq/src/: lib.rs
integral_eq/src/fredholm/: first_kind.rs  second_kind.rs
integral_eq/src/system_of_equations_based/: first_kind.rs  mod.rs  second_kind.rs
integral_eq/src/wolterra/: mod.rs  (+1 more)
mathparse/: Cargo.toml
mathparse/src/: expr.rs  lib.rs  parse.rs
min_find/: Cargo.toml
min_find/src/: golden_ratio_min.rs  gradients_min.rs  lib.rs  penalty_min.rs
sandbox/: Cargo.toml
spline/: Cargo.toml
spline/src/: lib.rs
src/: app.rs  lib.rs  main.rs  old.rs
src/area_calc/: mod.rs  secant_method_root.rs  simpson_integrator.rs
src/common/: function.rs  table_function.rs
src/functions/: table_function.rs
src/integral_eq/: conjugate_gradients.rs  fredholm_first_kind.rs  mod.rs  volterra_second_kind.rs
src/mathparse/: expr.rs  parse.rs
src/min_find/: golden_ratio_min.rs  gradients_min.rs  penalty_min.rs
src/problems/: area_calc.rs  field_macro.rs  form.rs  fredholm_1st.rs  gradients_min.rs  graph.rs  mod.rs  penalty_min.rs  spline.rs  volterra_2nd.rs  wolterra_2nd.rs
src/spline/: mod.rs
src/views/: area.rs  integral_fredholm_1.rs  integral_wolterra_2.rs  mod.rs
(+4 files in other folders)
