[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
area_calc = { path = "../area_calc" }
integral_eq = { path = "../integral_eq" }
mathparse = { path = "../mathparse" }
min_find = { path = "../min_find" }
spline = { path = "../spline" }
common = { path = "../common" }